Fixes create new account
Fixes accept new requests
Fixes contact update when the contact has just been accepted

--- a/Json/html/templates/requestsBox.tpl.html
+++ b/Json/html/templates/requestsBox.tpl.html
@@ -7,6 +7,6 @@
 		</div>
 	</div>
 	<div class="JsonSaysRequestsBox" id="JsonSaysRequestsBox">
-		{include file=requestsBoxList.tpl.html}
+		{include file="requestsBoxList.tpl.html"}
 	</div>
 </div>
