--- a/Json/html/templates/usersDirectory.tpl.html
+++ b/Json/html/templates/usersDirectory.tpl.html
@@ -6,7 +6,7 @@
 	<div class="JsonSaysRequestsBox">
 		<div class="JsonSaysFindBox" id="JsonSaysFindBox" title="{$findContact}">
 			<div style="position:relative;margin-right:30px;">
-				<input type="text" id="txtFindMe" name="txtFindMe" value="{$findLbl}" class="textBox" onclick="this.value=''" />
+				<input type="text" id="txtFindMe" name="txtFindMe" value="" placeholder="{$findLbl}" class="textBox" onclick="this.value=''" />
 			</div>
 			<div style="position:absolute;right:0px;top:0px;cursor:pointer;margin-top:10px;margin-right:5px;" onclick="JsonFindUser()">
 				>>
