Saving updated info, not yet finished

--- a/Json/html/templates/signin.tpl.html
+++ b/Json/html/templates/signin.tpl.html
@@ -1,24 +1,24 @@
 <div id="divSignin" style="border-width:1px;position:absolute;border-style:solid;padding:10px 10px 10px 10px;">
 	<div style="margin-top:10px;">
-		{$userText}
+		{$userText} *
 	</div>
 	<div style="margin-top:10px;">
 		<input type="text" id="txtLogin" name="txtLogin" class="textBox" value="" />
 	</div>
 	<div style="margin-top:10px;">
-		{$passText}
+		{$passText} *
 	</div>
 	<div style="margin-top:10px;">
 		<input type="password" id="txtPass" name="txtPass" class="textBox" />
 	</div>
 	<div style="margin-top:10px;">
-		{$nameText}
+		{$nameText} *
 	</div>
 	<div style="margin-top:10px;">
 		<input type="text" id="txtUserName" name="txtUserName" class="textBox" />
 	</div>
 	<div style="margin-top:10px;">
-		{$lastNameText}
+		{$lastNameText} *
 	</div>
 	<div style="margin-top:10px;">
 		<input type="text" id="txtFamName" name="txtFamName" class="textBox" />
