--- a/Json/html/templates/updateYourInformation.tpl.html
+++ b/Json/html/templates/updateYourInformation.tpl.html
@@ -1,28 +1,31 @@
-<div class="JasonSaysChatBox" style="min-width:280px;min-height:200px;_width:280px;" id="divUpdateYourInfo">
+<div class="JasonSaysChatBox" style="min-width:280px;min-height:200px;" id="divUpdateYourInfo">
 	<div style="position:relative;" >
 		<div style="position:relative;">{$tittle}</div>
 		<div class="closeX" title="" onclick="byebye('divUpdateYourInfo')">X</div>
 	</div>
 	<div class="JsonSaysRequestsBox">
-		<div id="divNameInfo" style="position:relative;height:25px;padding-top:10px;margin-top:5px;" onmouseover="checkAlertBox('divNameInfo','#E4E4E4')" onmouseout="checkReadBox('divNameInfo')">
-			<div style="position:relative">{$nameLbl}</div>
-			<div style="position:absolute;top:0px;right:0px;padding-top:10px;padding-left:10px;">
-				<input type="text" value="{$userData.TXT_NAME}" />
+		<div id="divNameInfo" style="position:relative;margin-top:5px;">
+			<div>{$nameLbl} *</div>
+			<div>
+				<input type="text" value="{$userData.TXT_NAME}" id="txtNameUpdate"/>
 			</div>
 		</div>
-		<div id="divSurNameInfo" style="position:relative;height:25px;padding-top:10px;margin-top:5px;" onmouseover="checkAlertBox('divSurNameInfo','#E4E4E4')" onmouseout="checkReadBox('divSurNameInfo')">
-			<div style="position:relative">{$surnameLbl}</div>
-			<div style="position:absolute;top:0px;right:0px;padding-top:10px;padding-left:10px;">
-				<input type="text" value="{$userData.TXT_SURNAME}"/>
+		<div id="divSurNameInfo" style="position:relative;padding-top:10px;margin-top:5px;">
+			<div>{$surnameLbl} *</div>
+			<div>
+				<input type="text" value="{$userData.TXT_SURNAME}" id="txtSurNameUpdate"/>
 			</div>
 		</div>
-		<div id="divEmailRecvInfo" style="position:relative;height:25px;padding-top:10px;margin-top:5px;" onmouseover="checkAlertBox('divEmailRecvInfo','#E4E4E4')" onmouseout="checkReadBox('divEmailRecvInfo')">
-			<div style="position:relative">{$email_label}</div>
-			<div style="position:absolute;top:0px;right:0px;padding-top:10px;padding-left:10px;">
-				<input type="text" value="{$userData.PASS_RECOVETY_EMAIL}"/>
+		<div id="divEmailRecvInfo" style="position:relative;padding-top:10px;margin-top:5px;">
+			<div>{$email_label}</div>
+			<div>
+				<input type="text" value="{$userData.PASS_RECOVETY_EMAIL}"  id="txtEmailUpdate"/>
+			</div>
+			<div>
+				{$legend}
 			</div>
 		</div>
-		<div id="divDeleteAccount" onclick="" style="color:#FFFFFF;position:relative;height:25px;padding-top:10px;margin-top:5px;background-color:#FF0000;cursor:pointer;">
+		<div id="divDeleteAccount" onclick="updateInfo('{$userData.TXT_EMAIL}')" style="color:#FFFFFF;position:relative;height:25px;padding-top:10px;margin-top:5px;background-color:#0B610B;cursor:pointer;">
 			<div style="position:relative;text-align:center;">{$saveLbl}</div>
 		</div>
 	</div>
