--- a/Json/html/templates/yourInformation.tpl.html
+++ b/Json/html/templates/yourInformation.tpl.html
@@ -32,7 +32,7 @@
 		</div>*}
 		<div id="divDeleteQuestion" style="position:relative;min-height:25px;padding-top:10px;margin-top:5px;display:none;">
 		</div>
-		<div id="divSetUpAccount" onclick="askEmailAddress('{$userData.TXT_EMAIL}')" style="color:#FFFFFF;position:relative;height:25px;padding-top:10px;margin-top:5px;background-color:#0905FC;cursor:pointer;">
+		<div id="divSetUpAccount" onclick="askEmailAddress('{$userData.TXT_EMAIL}','divYourInfo')" style="color:#FFFFFF;position:relative;height:25px;padding-top:10px;margin-top:5px;background-color:#0905FC;cursor:pointer;">
 			<div style="position:relative;text-align:center;">{$passRecoveryLabel}</div>
 		</div>
 		<div id="divDeleteAccount" onclick="deleteUserAcount('{$userData.TXT_EMAIL}',0)" style="color:#FFFFFF;position:relative;height:25px;padding-top:10px;margin-top:5px;background-color:#FF0000;cursor:pointer;">
