UPdate info finalised

--- a/Json/html/templates/updateYourInformation.tpl.html
+++ b/Json/html/templates/updateYourInformation.tpl.html
@@ -19,7 +19,7 @@
 		<div id="divEmailRecvInfo" style="position:relative;padding-top:10px;margin-top:5px;">
 			<div>{$email_label}</div>
 			<div>
-				<input type="text" value="{$userData.PASS_RECOVETY_EMAIL}"  id="txtEmailUpdate"/>
+				<input type="text" value="{$userData.PASS_RECOVERY_EMAIL}"  id="txtEmailUpdate"/>
 			</div>
 			<div>
 				{$legend}
